// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSCAPPolicy expect to render without error 1`] = `
Array [
  <div
    className="pf-c-content"
  >
    <h1
      className=""
      data-pf-content={true}
    >
      Create SCAP policy
    </h1>
    <h4
      className=""
      data-pf-content={true}
    >
      Select the operating system and policy type
    </h4>
  </div>,
  <form
    className="pf-c-form"
    noValidate={true}
  >
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="benchmark"
        >
          <span
            className="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            className="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <br />
        
      </div>
    </div>
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="policy-type"
        >
          <span
            className="pf-c-form__label-text"
          >
            Policy type
          </span>
          <span
            aria-hidden="true"
            className="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-l-grid pf-m-gutter"
        />
        
      </div>
    </div>
  </form>,
]
`;

exports[`CreateSCAPPolicy should render a spinner while loading 1`] = `
<div
  className="ins-c-spinner"
  role="status"
>
  <span
    className="pf-u-screen-reader"
  >
    Loading...
  </span>
</div>
`;

exports[`CreateSCAPPolicy should render benchmarks and no policies until one is selected 1`] = `
Array [
  <div
    className="pf-c-content"
  >
    <h1
      className=""
      data-pf-content={true}
    >
      Create SCAP policy
    </h1>
    <h4
      className=""
      data-pf-content={true}
    >
      Select the operating system and policy type
    </h4>
  </div>,
  <form
    className="pf-c-form"
    noValidate={true}
  >
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="benchmark"
        >
          <span
            className="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            className="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <br />
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-tertiary wizard-os-button "
          data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          RHEL 6
        </button>
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-tertiary wizard-os-button "
          data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          RHEL 7
        </button>
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-tertiary wizard-os-button "
          data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          RHEL 7
        </button>
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-tertiary wizard-os-button "
          data-ouia-component-id="OUIA-Generated-Button-tertiary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          RHEL 8
        </button>
        
      </div>
    </div>
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="policy-type"
        >
          <span
            className="pf-c-form__label-text"
          >
            Policy type
          </span>
          <span
            aria-hidden="true"
            className="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-l-grid pf-m-gutter"
        />
        
      </div>
    </div>
  </form>,
]
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 1`] = `
Array [
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button active-wizard-os-button"
    data-ouia-component-id="OUIA-Generated-Button-tertiary-5"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 6
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-6"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 7
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-7"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 7
  </button>,
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-tertiary wizard-os-button "
    data-ouia-component-id="OUIA-Generated-Button-tertiary-8"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    role={null}
    type="button"
  >
    RHEL 8
  </button>,
]
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 2`] = `
<ProfileTypeSelect
  onClick={[Function]}
  profiles={
    Array [
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This is a *draft* SCAP profile for Red Hat Certified Cloud Providers",
        "disabled": false,
        "id": "4a271e9e-6e84-4038-941b-6b265d9b1727",
        "name": "Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)",
        "refId": "xccdf_org.ssgproject.content_profile_rht-ccp",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": " This profile reflects the Centralized Super Computing Facility 
(CSCF) baseline for Red Hat Enterprise Linux 6. This baseline has received 
government ATO through the ICD 503 process, utilizing the CNSSI 1253 cross 
domain overlay. This profile should be considered in active development. 
Additional tailoring will be needed, such as the creation of RBAC roles 
for production deployment.",
        "disabled": false,
        "id": "2c9ef707-bb58-4f80-9ce4-c20ebd4248a8",
        "name": "CSCF RHEL6 MLS Core Baseline",
        "refId": "xccdf_org.ssgproject.content_profile_CSCF-RHEL6-MLS",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile demonstrates compliance against the 
U.S. Government Commercial Cloud Services (C2S) baseline.

This baseline was inspired by the Center for Internet Security
(CIS) Red Hat Enterprise Linux 6 Benchmark, v1.2.0 - 06-25-2013.
For the SCAP Security Guide project to remain in compliance with
CIS' terms and conditions, specifically Restrictions(8), note 
there is no representation or claim that the C2S profile will
ensure a system is in compliance or consistency with the CIS
baseline. 
",
        "disabled": false,
        "id": "197eb783-7bca-45c5-978d-c1e89b0118da",
        "name": "C2S for Red Hat Enterprise Linux 6",
        "refId": "xccdf_org.ssgproject.content_profile_C2S",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile contains rules to ensure standard security base of Red Hat Enterprise Linux 6 system.
Regardless of your system's workload all of these checks should pass.",
        "disabled": false,
        "id": "7f501f8b-be3b-4105-a7d4-aa7cfa61d823",
        "name": "Standard System Security Profile",
        "refId": "xccdf_org.ssgproject.content_profile_standard",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile is an example of a customized server profile.",
        "disabled": false,
        "id": "074277c6-3f32-4758-86f6-30da5b99c404",
        "name": "Example Server Profile",
        "refId": "xccdf_org.ssgproject.content_profile_CS2",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile contains items common to general-purpose desktop and server installations.",
        "disabled": false,
        "id": "f8f4b1ca-44ec-48cb-bfbf-2fca69663e10",
        "name": "Common Profile for General-Purpose Systems",
        "refId": "xccdf_org.ssgproject.content_profile_common",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile is for Red Hat Enterprise Linux 6 acting as a server.",
        "disabled": false,
        "id": "11efa871-3514-4931-95fb-c44f546b303d",
        "name": "Server Baseline",
        "refId": "xccdf_org.ssgproject.content_profile_server",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile is developed under the DoD consensus model and DISA FSO Vendor STIG process,
serving as the upstream development environment for the Red Hat Enterprise Linux 6 Server STIG.

As a result of the upstream/downstream relationship between the SCAP Security Guide project 
and the official DISA FSO STIG baseline, users should expect variance between SSG and DISA FSO content.
For official DISA FSO STIG content, refer to http://iase.disa.mil/stigs/os/unix-linux/Pages/red-hat.aspx.

While this profile is packaged by Red Hat as part of the SCAP Security Guide package, please note 
that commercial support of this SCAP content is NOT available. This profile is provided as example 
SCAP content with no endorsement for suitability or production readiness. Support for this 
profile is provided by the upstream SCAP Security Guide community on a best-effort basis. The
upstream project homepage is https://fedorahosted.org/scap-security-guide/.
",
        "disabled": false,
        "id": "efedd0fe-7bcd-490e-b8c9-416122533ce5",
        "name": "Upstream STIG for Red Hat Enterprise Linux 6 Server",
        "refId": "xccdf_org.ssgproject.content_profile_stig-rhel6-server-upstream",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile is a working draft for a USGCB submission against RHEL6 Server.",
        "disabled": false,
        "id": "91ffca63-accc-4698-ba93-84d147c80271",
        "name": "United States Government Configuration Baseline (USGCB)",
        "refId": "xccdf_org.ssgproject.content_profile_usgcb-rhel6-server",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This is a *draft* profile for PCI-DSS v3",
        "disabled": false,
        "id": "45b793d2-9f6a-4854-b0a8-9b89e7d7f3eb",
        "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 6",
        "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
      },
      Object {
        "__typename": "Profile",
        "complianceThreshold": 100,
        "description": "This profile follows the Committee on National Security Systems Instruction
(CNSSI) No. 1253, \\"Security Categorization and Control Selection for National Security
Systems\\" on security controls to meet low confidentiality, low integrity, and low
assurance.\\"",
        "disabled": false,
        "id": "f839edeb-c32f-425c-bbd2-1b807806393b",
        "name": "CNSSI 1253 Low/Low/Low",
        "refId": "xccdf_org.ssgproject.content_profile_nist-cl-il-al",
      },
    ]
  }
/>
`;
